Applied code improvements